--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
     height: 100%;
     padding: 0;
     margin: 0;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Thin', 'Verdana', 'Arial';
     color: #333;
   }
   
