--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,7 +17,7 @@
             <a href="/" class="navbar-item">Home</a>
             <a href="/dashboard" class="navbar-item">Dashboard</a>
             <a href="/dashboard/new" class="navbar-item">Create Post</a>
-            <button id="logout" class="navbar-item btn-no-style">Logout</button>
+            <button id="logout" class="navbar-item button">Logout</button>
             {{else}}
             <a href="/" class="navbar-item">Home</a>
             <a href="/login" class="navbar-item button">Login</a>
