--- a/public/css/style.css
+++ b/public/css/style.css
@@ -96,7 +96,7 @@
     padding: 0;
     cursor: pointer;
     text-decoration: none;
-    color: #225ca3;
+    color: #bd7a29;
     font-size: 100%;
     font-weight: bold;
     transition: color .1s;
@@ -105,7 +105,7 @@
   
   .btn-no-style:hover {
     background: none;
-    color: #3486eb;
+    color: #a25c00;
   }
   
   .save-post-btn {
