--- a/views/editpost.handlebars
+++ b/views/editpost.handlebars
@@ -16,7 +16,7 @@
       <a href="/dashboard/edit/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
     <button type="submit" class="save-post-btn">Save</button>
-    <button type="button" class="delete-post-btn">Delete</button>
+    <button type="submit" class="delete-post-btn">Delete</button>
   </form>
 </article>
 
